feat: add hardware profiles, video prompt optimization, and custom node resolution
- Add HardwareProfileService and VideoPromptOptimizer with hardware tier presets
- Add CustomNodeResolverService and TriggerWordService for workflow dependency gap analysis
- Add RestBridgeController and ComfyReactiveWebServer
- Enhance GraphMutationService, EncryptionUtils, ComfyPipelineService, and ProfileManager
- Add comprehensive test suites for new services and controllers